Closed
Bug 226026
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for profile migrator files
Categories
(Core Graveyard :: Profile: BackEnd, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
1.37 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/profile/pref-migrator/src/nsPrefMigration.cpp&rev=1.187&mark=317#312
Deref-error: "item"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/profile/pref-migrator/src/nsPrefMigration.cpp&rev=1.187&mark=318#313
Deref-error: "item"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/profile/Acct/nsAccount.cpp&rev=1.30&mark=250#245
Deref-error: "lpOsVersionInfo"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/profile/Acct/nsAccount.cpp&rev=1.30&mark=253#24
Deref-error: "lpOsVersionInfo"
Attachment #135765 -
Attachment description: check for alloc failure → check for alloc failure (-uwp)
Attachment #135765 -
Flags: superreview?(roc)
Attachment #135765 -
Flags: review?(roc)
I can't see nsAccount.cpp in LXR, but I suspect the allocation of "new
OSVERSIONINFO" can be replaced with a stack variable, is that correct?
The file is in the attic. i have no idea why it isn't dead on boffo.
I won't commit that change.
Status: NEW → ASSIGNED
Comment on attachment 135765 [details] [diff] [review]
check for alloc failure (-uwp)
OK on the nsPrefMigration change
Attachment #135765 -
Flags: superreview?(roc)
Attachment #135765 -
Flags: superreview+
Attachment #135765 -
Flags: review?(roc)
Attachment #135765 -
Flags: review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Summary: DRefTool analysis for profile files → DRefTool analysis for profile migrator files
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•