Bug 226026 DRefTool analysis for profile migrator files r=roc sr=roc